[gd_scene load_steps=19 format=2]

[ext_resource path="res://Menu/snowFlakes.png" type="Texture" id=1]
[ext_resource path="res://cutscenes/Opening_scene/Opening_scene.gd" type="Script" id=2]
[ext_resource path="res://cutscenes/Opening_scene/Opening_pics/BGExtended.png" type="Texture" id=3]
[ext_resource path="res://assets/dialogue/dialogue.tscn" type="PackedScene" id=4]
[ext_resource path="res://cutscenes/Opening_scene/Opening_pics/tim_sprites.png" type="Texture" id=5]
[ext_resource path="res://assets/audio/Contemplation.ogg" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Flakes"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("snowFlakes1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 80, -70 ), Vector2( 80, 70 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("snowFlakes:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 80, 70 ), Vector2( 80, 210 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("snowFlakes1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 80, -70 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("snowFlakes:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 80, 70 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 160, 70 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../tim:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 276, 111 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "bg_pan"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 160, 70 ), Vector2( 0, 70 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../tim:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 276, 111 ), Vector2( 116, 111 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "New Anim_1"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../tim:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=10]
resource_name = "New Anim_3"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../tim:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../tim:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4 ]
}

[sub_resource type="Animation" id=8]
resource_name = "tim_wind_2"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../tim:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="GDScript" id=13]
script/source = "extends Camera2D
"

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background_extended" type="Sprite" parent="."]
position = Vector2( 160, 70 )
texture = ExtResource( 3 )

[node name="tim" type="Sprite" parent="."]
position = Vector2( 276, 111 )
texture = ExtResource( 5 )
hframes = 6
frame = 4
region_rect = Rect2( 95.2787, 30.1255, 0.257782, 0 )

[node name="snowFlakes" type="Sprite" parent="."]
position = Vector2( 80, 70 )
texture = ExtResource( 1 )

[node name="snowFlakes1" type="Sprite" parent="."]
position = Vector2( 80, -70 )
texture = ExtResource( 1 )

[node name="anim_snow" type="AnimationPlayer" parent="."]
anims/Flakes = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="transition" type="AnimationPlayer" parent="."]
root_node = NodePath("../ColorRect")
anims/RESET = SubResource( 3 )
anims/fade_in = SubResource( 14 )
anims/fade_out = SubResource( 4 )

[node name="bg_pan" type="AnimationPlayer" parent="."]
root_node = NodePath("../Background_extended")
anims/RESET = SubResource( 5 )
anims/bg_pan = SubResource( 6 )

[node name="tim_wind" type="AnimationPlayer" parent="."]
root_node = NodePath("../bg_pan")
"anims/New Anim_1" = SubResource( 9 )
"anims/New Anim_3" = SubResource( 10 )
anims/RESET = SubResource( 7 )
anims/tim_wind_2 = SubResource( 8 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="contemplation" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 0.125, 0.125 )
script = SubResource( 13 )

[node name="Timer" type="Timer" parent="."]
wait_time = 12.0

[node name="change_scene" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="dialogue" parent="." instance=ExtResource( 4 )]
process_priority = 1
offset = Vector2( 145, 10 )
scale = Vector2( 2.5, 2.5 )
transform = Transform2D( 2.5, 0, 0, 2.5, 145, 10 )
dialogue = "res://assets/dialogue/json/opening_scene.json"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="change_scene" to="." method="change_scene"]
[connection signal="timeout" from="change_scene" to="." method="_on_change_scene_timeout"]
